--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "tsx src/index.ts",
     "dev": "tsx watch src/index.ts",
+    "start:withRedis": "redis-server --daemonize yes && tsx src/index.ts",
     "build": "tsc",
     "test": "vitest",
     "test:watch": "vitest watch",
@@ -28,13 +29,17 @@
   "dependencies": {
     "@0xsequence/auth": "^2.2.11",
     "@0xsequence/network": "^2.2.11",
+    "@fastify/cors": "^10.0.2",
     "@fastify/redis": "^7.0.2",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.1",
     "@prisma/client": "^6.3.1",
     "@sinclair/typebox": "^0.34.16",
     "abitype": "^1.0.8",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "fastify": "^5.2.1",
+    "fastify-plugin": "^5.0.1",
     "prisma": "^6.3.1",
     "viem": "^2.22.23",
     "vitest": "^3.0.5"
