--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@0xsequence/auth": "^2.2.11",
+    "@0xsequence/indexer": "^2.2.13",
     "@0xsequence/network": "^2.2.11",
     "@fastify/cors": "^10.0.2",
     "@fastify/redis": "^7.0.2",
