--- a/package.json
+++ b/package.json
@@ -31,17 +31,24 @@
     "@0xsequence/auth": "^2.2.11",
     "@0xsequence/indexer": "^2.2.13",
     "@0xsequence/network": "^2.2.11",
+    "@ethersproject/bytes": "^5.7.0",
+    "@ethersproject/properties": "^5.7.0",
+    "@ethersproject/signing-key": "^5.7.0",
+    "@ethersproject/transactions": "^5.7.0",
     "@fastify/cors": "^10.0.2",
     "@fastify/redis": "^7.0.2",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.1",
+    "@google-cloud/kms": "^4.5.0",
     "@prisma/client": "^6.3.1",
     "@sinclair/typebox": "^0.34.16",
     "abitype": "^1.0.8",
+    "asn1js": "^3.0.5",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "fastify": "^5.2.1",
     "fastify-plugin": "^5.0.1",
+    "pkijs": "^3.2.4",
     "prisma": "^6.3.1",
     "viem": "^2.22.23",
     "vitest": "^3.0.5"
