--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   postgres:
@@ -6,7 +6,7 @@ services:
     container_name: sidekick_postgres
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dev -d sequence_sidekick"]
+      test: ["CMD-SHELL", "pg_isready -U dev"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -18,15 +18,14 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./prisma/migrations:/docker-entrypoint-initdb.d
 
   redis:
     container_name: sidekick_redis
     image: redis:7.2
     restart: always
-    command: redis-server --requirepass sequence
+    command: redis-server --requirepass ${REDIS_PASSWORD:-sequence}
     ports:
-      - 6379:6379
+      - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
     
@@ -39,13 +38,34 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
-    environment:
-      DATABASE_URL: postgresql://dev:sequence@postgres:5432/sequence_sidekick?schema=public
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_PASSWORD: sequence
     ports:
-      - "3000:3000"
+      - "${PORT:-3000}:3000"
+    environment:
+      - PORT=${PORT:-3000}
+      - HOST=${HOST:-0.0.0.0}
+      - PROJECT_ACCESS_KEY=${PROJECT_ACCESS_KEY}
+      - SECRET_KEY=${SECRET_KEY}
+      - DATABASE_URL=postgresql://dev:sequence@postgres:5432/sequence_sidekick?schema=public
+      - REDIS_HOST=redis
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - SEQUENCE_RPC_URL=${SEQUENCE_RPC_URL}
+      - BUILDER_TOKEN=${BUILDER_TOKEN}
+      - INDEXER_SECRET_KEY=${INDEXER_SECRET_KEY}
+      - INDEXER_URL=${INDEXER_URL}
+      - SIGNER_TYPE=${SIGNER_TYPE}
+      # AWS KMS configs
+      - AWS_REGION=${AWS_REGION}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_KMS_KEY_ID=${AWS_KMS_KEY_ID}
+      # Google KMS configs
+      - PROJECT=${PROJECT}
+      - LOCATION=${LOCATION}
+      - KEY_RING=${KEY_RING}
+      - CRYPTO_KEY=${CRYPTO_KEY}
+      - CRYPTO_KEY_VERSION=${CRYPTO_KEY_VERSION}
+      
     command: ["pnpm", "start"]
 
 volumes:
