--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@0xsequence/google-kms-signer": "^0.2.0",
     "@0xsequence/indexer": "^2.2.13",
     "@0xsequence/network": "^2.2.11",
+    "@aws-sdk/client-kms": "^3.750.0",
     "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/properties": "^5.7.0",
     "@ethersproject/signing-key": "^5.7.0",
@@ -41,6 +42,9 @@
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.1",
     "@google-cloud/kms": "^4.5.0",
+    "@peculiar/asn1-ecc": "^2.3.15",
+    "@peculiar/asn1-schema": "^2.3.15",
+    "@peculiar/asn1-x509": "^2.3.15",
     "@prisma/client": "^6.3.1",
     "@sinclair/typebox": "^0.34.16",
     "abitype": "^1.0.8",
