--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     restart: always
     command: redis-server --requirepass ${REDIS_PASSWORD:-sequence}
     ports:
-      - "${REDIS_PORT:-6379}:6379"
+      - "6380"
     volumes:
       - redis_data:/data
     
@@ -66,7 +66,7 @@ services:
       - CRYPTO_KEY=${CRYPTO_KEY}
       - CRYPTO_KEY_VERSION=${CRYPTO_KEY_VERSION}
       
-    command: ["pnpm", "start"]
+    command: ["/bin/sh", "-c", "npx prisma migrate deploy && pnpm start"]
 
 volumes:
   postgres_data:
