update env example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,38 @@
+# Required env variables
 PORT=3000
 HOST=0.0.0.0
-EVM_PRIVATE_KEY='' # Private key of the EOA wallet used to sign transactions in the engine
-PROJECT_ACCESS_KEY='' # Sequence project access key
-ETHERSCAN_API_KEY='' # Etherscan API key
-SECRET_KEY=your_secret_key_here # Secret key for the engine, set it yourself, include in headers of POST requests
-DATABASE_URL="postgresql://dev:sequence@localhost:5432/sequence_engine?schema=public" # Database URL create by Docker or connect to your own 
+DATABASE_URL="postgresql://dev:sequence@localhost:5432/sequence_sidekick?schema=public" # Created by docker
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=sequence
+PROJECT_ACCESS_KEY= # Take it from Sequence Builder
+SECRET_KEY= # Set your own secret key for Sidekick, use it when making requests to the API
+SEQUENCE_RPC_URL= # Take it from Sequence Builder
+BUILDER_API_SECRET_KEY= # Take it from Sequence Builder
+INDEXER_SECRET_KEY= # Take it from Sequence Builder
+INDEXER_URL= # Take it from Sequence Builder
+
+# If using local signer
+EVM_PRIVATE_KEY=
+
+# If using Google KMS
+PROJECT=
+LOCATION=
+KEY_RING=
+CRYPTO_KEY=
+CRYPTO_KEY_VERSION=
+
+# If using AWS KMS
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_KMS_KEY_ID=
+
+# If using local signer (EVM private key)
+# SIGNER_TYPE=local
+
+# If using Google KMS
+# SIGNER_TYPE=google_kms
+
+# If using AWS KMS
+SIGNER_TYPE=aws_kms
