--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@0xsequence/auth": "^2.2.11",
+    "@0xsequence/aws-kms-signer": "^0.1.1",
     "@0xsequence/google-kms-signer": "^0.2.0",
     "@0xsequence/indexer": "^2.2.13",
     "@0xsequence/network": "^2.2.11",
@@ -44,20 +45,15 @@
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.1",
     "@google-cloud/kms": "^4.5.0",
-    "@peculiar/asn1-ecc": "^2.3.15",
-    "@peculiar/asn1-schema": "^2.3.15",
-    "@peculiar/asn1-x509": "^2.3.15",
     "@prisma/client": "^6.3.1",
     "@sinclair/typebox": "^0.34.16",
     "@types/bull": "^4.10.4",
     "abitype": "^1.0.8",
-    "asn1js": "^3.0.5",
     "bull": "^4.16.5",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "fastify": "^5.2.1",
     "fastify-plugin": "^5.0.1",
-    "pkijs": "^3.2.4",
     "prisma": "^6.3.1",
     "viem": "^2.22.23",
     "vitest": "^3.0.5"
