refactor: fixes and improvements

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
-    "docker:restart": "docker compose down && docker compose up -d",
+    "docker:restart": "docker compose down && docker compose build --no-cache && docker compose up -d",
     "docker:stop": "docker compose down -v",
-    "docker:start": "docker compose up -d",
+    "docker:start": "docker compose build --no-cache && docker compose up -d",
+    "docker:rebuild": "docker compose build --no-cache",
     "stop:redis": "redis-server stop",
     "start:redis": "redis-server --daemonize yes"
   },
@@ -41,6 +42,7 @@
     "@ethersproject/signing-key": "^5.7.0",
     "@ethersproject/transactions": "^5.7.0",
     "@fastify/cors": "^10.0.2",
+    "@fastify/rate-limit": "^10.2.2",
     "@fastify/redis": "^7.0.2",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.1",
