--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
     "@types/node": "^22.13.1",
     "@vitest/coverage-v8": "3.0.5",
     "pino-pretty": "^13.0.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.3.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5.7.3"
+    "tsx": "^4.19.2"
   },
   "dependencies": {
     "@0xsequence/auth": "^2.2.11",
@@ -58,6 +54,7 @@
     "fastify-plugin": "^5.0.1",
     "prisma": "^6.3.1",
     "viem": "^2.22.23",
-    "vitest": "^3.0.5"
+    "vitest": "^3.0.5",
+    "typescript": "^5.3.3"
   }
 }
