--- a/package.json
+++ b/package.json
@@ -53,8 +53,9 @@
     "fastify": "^5.2.1",
     "fastify-plugin": "^5.0.1",
     "prisma": "^6.3.1",
+    "prom-client": "^15.1.3",
+    "typescript": "^5.3.3",
     "viem": "^2.22.23",
-    "vitest": "^3.0.5",
-    "typescript": "^5.3.3"
+    "vitest": "^3.0.5"
   }
 }
