--- a/.env.example
+++ b/.env.example
@@ -11,27 +11,27 @@ SEQUENCE_RPC_URL= # Take it from Sequence Builder
 BUILDER_API_SECRET_KEY= # Take it from Sequence Builder
 INDEXER_URL= # Take it from Sequence Builder
 
-# If using local signer
-EVM_PRIVATE_KEY=
+# =====[ Optional Configuration ]=====
 
 # If using Google KMS
-PROJECT=
-LOCATION=
-KEY_RING=
-CRYPTO_KEY=
-CRYPTO_KEY_VERSION=
+# PROJECT=
+# LOCATION=
+# KEY_RING=
+# CRYPTO_KEY=
+# CRYPTO_KEY_VERSION=
 
 # If using AWS KMS
-AWS_REGION=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_KMS_KEY_ID=
+# AWS_REGION=
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
+# AWS_KMS_KEY_ID=
 
 # If using local signer (EVM private key)
-# SIGNER_TYPE=local
+# SIGNER_TYPE=local (defaults to this if no SIGNER_TYPE is found in env)
+# EVM_PRIVATE_KEY= (required if SIGNER_TYPE=local)
 
 # If using Google KMS
 # SIGNER_TYPE=google_kms
 
 # If using AWS KMS
-SIGNER_TYPE=aws_kms
+# SIGNER_TYPE=aws_kms
