--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
       - BUILDER_API_SECRET_KEY=${BUILDER_API_SECRET_KEY}
       - INDEXER_URL=${INDEXER_URL}
       - SIGNER_TYPE=${SIGNER_TYPE}
+      - DEBUG=${DEBUG}
       # AWS KMS configs
       - AWS_REGION=${AWS_REGION}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
