--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@0xsequence/auth": "^2.2.11",
     "@0xsequence/aws-kms-signer": "^0.1.1",
+    "@0xsequence/core": "^2.3.16",
     "@0xsequence/google-kms-signer": "^0.2.0",
     "@0xsequence/indexer": "^2.2.13",
     "@0xsequence/network": "^2.2.11",
