added auto verification of standard contracts + route

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ INDEXER_URL= # Take it from Sequence Builder
 
 # =====[ Optional Configuration ]=====
 
+# ETHERSCAN_API_KEY=
+# VERIFY_CONTRACT_ON_DEPLOY=
+
 # DEBUG=true (enables debug logs)
 
 # If using Google KMS
