--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:17
-    container_name: sidekick_postgres
+    container_name: sidekick-postgres
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U dev -d sequence_sidekick"]
@@ -9,8 +9,8 @@ services:
       timeout: 5s
       retries: 5
     environment:
-      POSTGRES_USER: dev
-      POSTGRES_PASSWORD: sequence
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: sequence_sidekick
     ports:
       - "5432:5432"
@@ -18,7 +18,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   redis:
-    container_name: sidekick_redis
+    container_name: sidekick-redis
     image: redis:7.2
     restart: always
     command: redis-server --requirepass ${REDIS_PASSWORD:-sequence}
@@ -29,7 +29,7 @@ services:
     
   sequence_sidekick:
     build: .
-    container_name: server
+    container_name: sequence-sidekick
     restart: always
     depends_on:
       postgres:
