added dev key generation and made project key required

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 ### =====[ Required Configuration ]=====
 
 ### Go to https://sequence.build, login or signup, create a project, go to "Embedded Wallet" and copy your own "Project Access Key"
-### We provide this project access key but we recommend using your own, especially for production.
-SEQUENCE_PROJECT_ACCESS_KEY="AQAAAAAAAJbd_5JOcE50AqglZCtvu51YlGI"  
+SEQUENCE_PROJECT_ACCESS_KEY=""  
+
+# =====[ Optional Configuration ]=====
 
 ### By default, the signer type is "local", which requires an EVM private key to be set. This will be your backend wallet.
+### If this is not provided, a random dev private key is generated and will be put into a dev.key file in the root of the project.
 ### Note that Sidekick creates a Sequence Smart Account Wallet for this private key and the backend wallet itself is
 ### a Sequence Smart Account Wallet, not an EOA.
 EVM_PRIVATE_KEY="0x" 
-
-# =====[ Optional Configuration ]=====
 
 ### By default we use these values if none is provided in .env
 # PORT=7500
