--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ SEQUENCE_PROJECT_ACCESS_KEY=""
 ### If this is not provided, a random dev private key is generated and will be put into a dev.key file in the root of the project.
 ### Note that Sidekick creates a Sequence Smart Account Wallet for this private key and the backend wallet itself is
 ### a Sequence Smart Account Wallet, not an EOA.
-EVM_PRIVATE_KEY="0x" 
+BACKEND_WALLET_PV_KEY="0x" 
 
 ### By default we use these values if none is provided in .env
 # PORT=7500
@@ -35,7 +35,7 @@ EVM_PRIVATE_KEY="0x"
 ### If using local signer (EVM private key)
 ### Note: This is enabled by default
 # SIGNER_TYPE=local=
-# EVM_PRIVATE_KEY= 
+# BACKEND_WALLET_PV_KEY= 
 
 ### If using Google KMS
 # SIGNER_TYPE=google_kms
