--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       - CRYPTO_KEY_VERSION=${CRYPTO_KEY_VERSION}
       - NODE_ENV=development
       # Local Signer configs
-      - EVM_PRIVATE_KEY=${EVM_PRIVATE_KEY}
+      - BACKEND_WALLET_PV_KEY=${BACKEND_WALLET_PV_KEY}
       
     command: ["/bin/sh", "-c", "npx prisma migrate reset --force && pnpm prisma migrate dev --name init && npx prisma migrate deploy && pnpm start"]
 
