remove prisma client autogen from git + add tenderly env vars

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,12 @@ BACKEND_WALLET_PV_KEY="0x"
 
 # DEBUG="true" 
 
+### For Tenderly simulations 
+# TENDERLY_PROJECT_SLUG=
+# TENDERLY_ACCOUNT_SLUG=
+### For tx simulation endpoint to work
+# TENDERLY_ACCESS_KEY=
+
 ### If using local signer (EVM private key)
 ### Note: This is enabled by default
 # SIGNER_TYPE=local=
