--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: sidekick-postgres
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dev -d sequence_sidekick"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d sequence_sidekick"]
       interval: 5s
       timeout: 5s
       retries: 5
