--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,12 @@ dev.key
 
 # Generated files
 src/lib/generated/
+
+# Terraform
+*.tfstate
+*.tfstate.backup
+.terraform/
+*.terraform.lock.hcl
+
+# Windows image file caches
+.*Zone.Identifier
