--- a/.gitignore
+++ b/.gitignore
@@ -194,5 +194,11 @@ src/lib/generated/
 .terraform/
 *.terraform.lock.hcl
 
+# Terraform
+*.tfstate
+*.tfstate.backup
+.terraform/
+*.terraform.lock.hcl
+
 # Windows image file caches
 .*Zone.Identifier
